# MigracaoGitLAB

./: 2022li1g029.cabal  README.md
doc/html/: Tarefa1_2022li1g029.html  Tarefa2_2022li1g029.html  Tarefa3_2022li1g029.html  Tarefa4_2022li1g029.html  doc-index.html  index.html
src/: Main.hs  Tarefa1_2022li1g029.hs  Tarefa2_2022li1g029.hs  Tarefa3_2022li1g029.hs  Tarefa4_2022li1g029.hs  Tarefa5_2022li1g029.hs
src/doc/html/: Tarefa2_2022li1g029.html  Tarefa3_2022li1g029.html  doc-index.html  index.html
tests/: Fase1.hs  Spec.hs  Tarefa1_2022li1g029_Spec.hs  Tarefa2_2022li1g029_Spec.hs  Tarefa3_2022li1g029_Spec.hs  Tarefa4_2022li1g029_Spec.hs  Tarefa5_2022li1g029_Spec.hs
