cabal-version:      2.4
name:               2022li1g029
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

author:             Vitor Miguel Almeida RIbeiro <a104010@alunos.uminho.pt>
                    Gonçalo Freitas <a104350@alunos.uminho.pt>

executable 2022li1g029
  main-is:          Main.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g029
    Tarefa2_2022li1g029
    Tarefa3_2022li1g029
    Tarefa4_2022li1g029
  build-depends:    base ^>=4.16.3.0
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite 2022li1g029-tests
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g029
    Tarefa2_2022li1g029
    Tarefa3_2022li1g029
    Tarefa4_2022li1g029
    Tarefa1_2022li1g029_Spec
    Tarefa2_2022li1g029_Spec
    Tarefa3_2022li1g029_Spec
    Tarefa4_2022li1g029_Spec
  build-depends:        base ^>=4.16.3.0, HUnit
  hs-source-dirs:       tests src
  default-language:     Haskell2010
